// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCollection should add links 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between items-center cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="flex justify-center items-center w-5 h-5 text-white rounded-full sc-bdfBwQ TENjd bg-theme-primary-600"
          height="10"
          width="10"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-secondary-text"
    >
      Tell people more about yourself through social media
    </div>
    <div
      class="mt-4 space-y-4"
    >
      <div
        class="SubForm__SubFormWrapper-c4tqfs-0 lkacNM"
      >
        <div
          class="grid gap-4"
          style="grid-template-columns: 2fr 3fr;"
        >
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="type"
            >
              Add media
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="relative w-full"
            >
              <input
                class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none sr-only Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                data-testid="select-list__input"
                name="type"
                readonly=""
                type="text"
                value="twitter"
              />
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="true"
                  aria-haspopup="listbox"
                  aria-owns="downshift-5-menu"
                  role="combobox"
                >
                  <label
                    for="downshift-4-input"
                    id="downshift-5-label"
                  />
                  <div
                    class="InputGroup-sc-1obbdqe-3 bgPpWR"
                    data-testid="SelectDropdownInput"
                  >
                    <span
                      class="py-3 pl-4 font-normal border border-transparent opacity-50 pointer-events-none InputGroup__InputAddon-sc-1obbdqe-0 bsvVEG"
                      data-testid="SelectDropdownInput__typeahead"
                    >
                      Twitter
                    </span>
                    <input
                      aria-activedescendant="downshift-5-item-0"
                      aria-autocomplete="list"
                      aria-controls="downshift-5-menu"
                      aria-labelledby="downshift-5-label"
                      autocomplete="off"
                      class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none cursor-default Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                      data-testid="SelectDropdownInput__input"
                      id="downshift-4-input"
                      name="type"
                      placeholder="Select option"
                      value="Twitter"
                    />
                  </div>
                  <ul
                    aria-labelledby="downshift-5-label"
                    class="styles__SelectOptionsList-b2falt-1 cGgIup is-open"
                    id="downshift-5-menu"
                    role="listbox"
                  >
                    <li
                      aria-selected="true"
                      class="cursor-default select-list-option is-highlighted"
                      data-testid="select-list__toggle-option-0"
                      id="downshift-5-item-0"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        Twitter
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="w-10 pointer-events-none InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV text-theme-secondary-500"
                >
                  <div
                    class="transition-transform transform rotate-180 sc-bdfBwQ gLRWTb"
                    height="5"
                    width="7"
                  >
                    <svg>
                      caret-down.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="value"
            >
              Link
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <input
              aria-invalid="false"
              class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures "
              data-testid="LinkCollection__input-link"
              name="value"
            />
          </fieldset>
          <button
            class="col-span-2 Button__StyledButton-mdtvtf-0 kwcZQn"
            data-testid="LinkCollection__add-link"
            disabled=""
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              Add Link
            </div>
          </button>
        </div>
      </div>
      <div
        class="-mt-3 Table__TableWrapper-sc-84pst5-0 ccYCKK"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
              role="row"
            >
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex align-top flex-inline "
                >
                  <div>
                    Name
                  </div>
                  <div
                    class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 "
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex align-top flex-inline no-border "
                >
                  <div>
                    Link
                  </div>
                  <div
                    class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex hidden align-top flex-inline "
                >
                  <div>
                    Actions
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
              data-testid="TableRow"
            >
              <td
                class="w-40"
              >
                <div
                  class="font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
                >
                  <input
                    name="links[0].type"
                    type="hidden"
                    value="twitter"
                  />
                  <span>
                    Twitter
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="font-semibold break-all TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <input
                    name="links[0].value"
                    type="hidden"
                    value="https://twitter.com/arkecosystem"
                  />
                  <span>
                    https://twitter.com/arkecosystem
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 OTOjy"
                    data-testid="LinkCollection__remove-link"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ fPrsah"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should remove links 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between items-center cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="flex justify-center items-center w-5 h-5 text-white rounded-full sc-bdfBwQ TENjd bg-theme-primary-600"
          height="10"
          width="10"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-secondary-text"
    >
      Tell people more about yourself through social media
    </div>
    <div
      class="mt-4 space-y-4"
    >
      <div
        class="SubForm__SubFormWrapper-c4tqfs-0 lkacNM"
      >
        <div
          class="grid gap-4"
          style="grid-template-columns: 2fr 3fr;"
        >
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="type"
            >
              Add media
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="relative w-full"
            >
              <input
                class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none sr-only Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                data-testid="select-list__input"
                name="type"
                readonly=""
                type="text"
                value=""
              />
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="downshift-33-menu"
                  role="combobox"
                >
                  <label
                    for="downshift-32-input"
                    id="downshift-33-label"
                  />
                  <div
                    class="InputGroup-sc-1obbdqe-3 bgPpWR"
                    data-testid="SelectDropdownInput"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-33-menu"
                      aria-labelledby="downshift-33-label"
                      autocomplete="off"
                      class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none cursor-default Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                      data-testid="SelectDropdownInput__input"
                      id="downshift-32-input"
                      name="type"
                      placeholder="Select option"
                      value=""
                    />
                  </div>
                  <ul
                    aria-labelledby="downshift-33-label"
                    class="styles__SelectOptionsList-b2falt-1 cGgIup"
                    id="downshift-33-menu"
                    role="listbox"
                  />
                </div>
                <div
                  class="w-10 pointer-events-none InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV text-theme-secondary-500"
                >
                  <div
                    class="transition-transform sc-bdfBwQ gLRWTb "
                    height="5"
                    width="7"
                  >
                    <svg>
                      caret-down.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="value"
            >
              Link
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <input
              aria-invalid="false"
              class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures "
              data-testid="LinkCollection__input-link"
              disabled=""
              name="value"
            />
          </fieldset>
          <button
            class="col-span-2 Button__StyledButton-mdtvtf-0 kwcZQn"
            data-testid="LinkCollection__add-link"
            disabled=""
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              Add Link
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between items-center cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="flex justify-center items-center w-5 h-5 rounded-full sc-bdfBwQ TENjd text-theme-primary-600 bg-theme-primary-100"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-secondary-text"
    >
      Tell people more about yourself through social media
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should select a specific link type 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between items-center cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="flex justify-center items-center w-5 h-5 text-white rounded-full sc-bdfBwQ TENjd bg-theme-primary-600"
          height="10"
          width="10"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-secondary-text"
    >
      Tell people more about yourself through social media
    </div>
    <div
      class="mt-4 space-y-4"
    >
      <div
        class="SubForm__SubFormWrapper-c4tqfs-0 lkacNM"
      >
        <div
          class="grid gap-4"
          style="grid-template-columns: 2fr 3fr;"
        >
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="type"
            >
              Add media
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="relative w-full"
            >
              <input
                class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none sr-only Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                data-testid="select-list__input"
                name="type"
                readonly=""
                type="text"
                value=""
              />
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="downshift-89-menu"
                  role="combobox"
                >
                  <label
                    for="downshift-88-input"
                    id="downshift-89-label"
                  />
                  <div
                    class="InputGroup-sc-1obbdqe-3 bgPpWR"
                    data-testid="SelectDropdownInput"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-89-menu"
                      aria-labelledby="downshift-89-label"
                      autocomplete="off"
                      class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none cursor-default Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                      data-testid="SelectDropdownInput__input"
                      id="downshift-88-input"
                      name="type"
                      placeholder="Select option"
                      value=""
                    />
                  </div>
                  <ul
                    aria-labelledby="downshift-89-label"
                    class="styles__SelectOptionsList-b2falt-1 cGgIup"
                    id="downshift-89-menu"
                    role="listbox"
                  />
                </div>
                <div
                  class="w-10 pointer-events-none InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV text-theme-secondary-500"
                >
                  <div
                    class="transition-transform sc-bdfBwQ gLRWTb "
                    height="5"
                    width="7"
                  >
                    <svg>
                      caret-down.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="value"
            >
              Link
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <input
              aria-invalid="false"
              class="overflow-hidden py-3 px-4 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures "
              data-testid="LinkCollection__input-link"
              disabled=""
              name="value"
            />
          </fieldset>
          <button
            class="col-span-2 Button__StyledButton-mdtvtf-0 kwcZQn"
            data-testid="LinkCollection__add-link"
            disabled=""
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              Add Link
            </div>
          </button>
        </div>
      </div>
      <div
        class="-mt-3 Table__TableWrapper-sc-84pst5-0 ccYCKK"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
              role="row"
            >
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex align-top flex-inline "
                >
                  <div>
                    Primary
                  </div>
                  <div
                    class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex align-top flex-inline "
                >
                  <div>
                    Name
                  </div>
                  <div
                    class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 "
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex align-top flex-inline no-border "
                >
                  <div>
                    Link
                  </div>
                  <div
                    class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <div
                      class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                      height="5"
                      role="img"
                      width="8"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex hidden align-top flex-inline "
                >
                  <div>
                    Actions
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
              data-testid="TableRow"
            >
              <td
                class="w-16"
              >
                <div
                  class="justify-center TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
                >
                  <input
                    class="RadioButton-sc-17mep65-0 fBzKtL"
                    color="success"
                    data-testid="LinkCollection__selected"
                    type="radio"
                  />
                </div>
              </td>
              <td
                class="w-40"
              >
                <div
                  class="font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <input
                    name="links[0].type"
                    type="hidden"
                    value="twitter"
                  />
                  <span>
                    Twitter
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="font-semibold break-all TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <input
                    name="links[0].value"
                    type="hidden"
                    value="testing link"
                  />
                  <span>
                    testing link
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 OTOjy"
                    data-testid="LinkCollection__remove-link"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ fPrsah"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </td>
            </tr>
            <tr
              class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
              data-testid="TableRow"
            >
              <td
                class="w-16"
              >
                <div
                  class="justify-center TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR"
                />
              </td>
              <td
                class="w-40"
              >
                <div
                  class="font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <input
                    name="links[1].type"
                    type="hidden"
                    value="facebook"
                  />
                  <span>
                    Facebook
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="font-semibold break-all TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
                >
                  <input
                    name="links[1].value"
                    type="hidden"
                    value="testing link 2"
                  />
                  <span>
                    testing link 2
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 OTOjy"
                    data-testid="LinkCollection__remove-link"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ fPrsah"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should toggle open/close link collection 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex justify-between items-center cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="flex justify-center items-center w-5 h-5 rounded-full sc-bdfBwQ TENjd text-theme-primary-600 bg-theme-primary-100"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-secondary-text"
    >
      Tell people more about yourself through social media
    </div>
  </div>
</DocumentFragment>
`;
